; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_opDBcc.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_opDBcc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@INSN_GET_COND = common dso_local global i32 0, align 4
@INSN_GET_REG0 = common dso_local global i32 0, align 4
@INSN_GET_IMM16 = common dso_local global i32 0, align 4
@imm16 = common dso_local global i64 0, align 8
@cond = common dso_local global i32 0, align 4
@current_entry = common dso_local global i32 0, align 4
@reg0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i64)* @opDBcc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opDBcc(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* @INSN_GET_COND, align 4
  %8 = load i32, i32* @INSN_GET_REG0, align 4
  %9 = load i32, i32* @INSN_GET_IMM16, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @imm16, align 8
  %14 = add nsw i64 %12, %13
  store i64 %14, i64* %5, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @btcache_lookup(i64 %15)
  store i64 %16, i64* %6, align 8
  %17 = load i32, i32* @cond, align 4
  %18 = load i32, i32* @current_entry, align 4
  %19 = call i32 @JIT_EMIT_TEST_cc(i32 %17, i32 %18)
  %20 = load i64, i64* %6, align 8
  %21 = icmp sge i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %2
  %23 = load i32, i32* @current_entry, align 4
  %24 = load i32, i32* @reg0, align 4
  %25 = mul nsw i32 %24, 4
  %26 = load i64, i64* %5, align 8
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @JIT_EMIT_DBcc_native(i32 %23, i32 %25, i64 %26, i64 %27)
  br label %35

29:                                               ; preds = %2
  %30 = load i32, i32* @current_entry, align 4
  %31 = load i32, i32* @reg0, align 4
  %32 = mul nsw i32 %31, 4
  %33 = load i64, i64* %5, align 8
  %34 = call i32 @JIT_EMIT_DBcc(i32 %30, i32 %32, i64 %33)
  br label %35

35:                                               ; preds = %29, %22
  ret i32 0
}

declare dso_local i64 @btcache_lookup(i64) #1

declare dso_local i32 @JIT_EMIT_TEST_cc(i32, i32) #1

declare dso_local i32 @JIT_EMIT_DBcc_native(i32, i32, i64, i64) #1

declare dso_local i32 @JIT_EMIT_DBcc(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
